# project-config

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint.yaml  README.md  index.html  invalid-operator]  lychee.toml  package-lock.json  pyproject.toml  setup.py
.github/workflows/: ci.yml  deploy-docs.yml  pre-commit-autoupdate.yml  release-docs.yml
0.1.0/: basic-usage.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.1.0/.doctrees/: examples.doctree  index.doctree  install.doctree
0.1.0/_sources/: examples.rst.txt  index.rst.txt
0.1.0/in-depth/: serialization.html
0.1.0/reference/: cli.html  config.html  plugins.html
0.2.0/: .buildinfo  basic-usage.html  examples.html  genindex.html  py-modindex.html
0.2.0/.doctrees/: index.doctree  install.doctree
0.2.0/_modules/: index.html
0.2.0/_sources/: index.rst.txt  install.rst.txt
0.2.0/dev/: contributing.html  plugins.html  reporters.html
0.2.0/in-depth/: rationale.html  serialization.html
0.2.0/reference/: cli.html  config.html  styling.html
0.3.0/: .buildinfo  examples.html  index.html  search.html  searchindex.js
0.3.0/.doctrees/: environment.pickle
0.3.0/_sources/: examples.rst.txt  index.rst.txt
0.3.0/dev/: changelog.html  reporters.html
0.3.0/in-depth/: serialization.html
0.3.0/reference/: styling.html
0.3.1/: .buildinfo  examples.html  install.html  objects.inv  py-modindex.html  searchindex.js
0.3.1/.doctrees/: basic-usage.doctree  environment.pickle  examples.doctree  install.doctree
0.3.1/_sources/: examples.rst.txt
0.3.1/dev/: changelog.html  contributing.html  plugins.html
0.3.1/in-depth/: rationale.html  serialization.html
0.3.1/reference/: cli.html  config.html
0.4.0/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  searchindex.js
0.4.0/.doctrees/: environment.pickle  install.doctree
0.4.0/_modules/: index.html
0.4.0/dev/: changelog.html  plugins.html
0.4.0/reference/: cli.html  plugins.html  styling.html
0.5.0/: .buildinfo  examples.html  index.html  install.html  objects.inv  searchindex.js
0.5.0/.doctrees/: environment.pickle  examples.doctree  install.doctree
0.5.0/_modules/: index.html
0.5.0/_sources/: basic-usage.rst.txt
0.5.0/dev/: reporters.html
0.5.0/in-depth/: rationale.html
0.5.0/reference/: config.html
0.6.0/: .buildinfo  basic-usage.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.6.0/.doctrees/: environment.pickle  install.doctree
0.6.0/_modules/: typing.html
0.6.0/reference/: cli.html  config.html  plugins.html
0.7.0/: .buildinfo  examples.html  index.html  objects.inv  py-modindex.html  searchindex.js
0.7.0/.doctrees/: basic-usage.doctree  environment.pickle
0.7.0/_modules/: typing.html
0.7.0/_sources/: examples.rst.txt
0.7.0/dev/: plugins.html  reporters.html
0.7.0/in-depth/: serialization.html
0.7.0/reference/: plugins.html
0.7.1/: .buildinfo  py-modindex.html  search.html  searchindex.js
0.7.1/.doctrees/: environment.pickle  examples.doctree  install.doctree
0.7.1/_modules/: typing.html
0.7.1/_sources/: basic-usage.rst.txt  install.rst.txt
0.7.1/dev/: plugins.html  reporters.html
0.7.1/in-depth/: rationale.html  serialization.html
0.7.1/reference/: cli.html  config.html  plugins.html  styling.html
0.7.2/: .buildinfo  search.html
0.7.2/.doctrees/: environment.pickle
0.7.2/_sources/: index.rst.txt
0.7.2/dev/: changelog.html
0.7.2/reference/: plugins.html  styling.html
0.7.3/: .buildinfo  basic-usage.html  index.html  install.html  objects.inv  searchindex.js
0.7.3/.doctrees/: basic-usage.doctree  environment.pickle  install.doctree
0.7.3/_modules/: index.html
0.7.3/_sources/: install.rst.txt
0.7.3/dev/: contributing.html  plugins.html
0.7.3/in-depth/: serialization.html
0.7.3/reference/: cli.html  config.html  plugins.html
0.7.3/tutorials/: index.html
0.7.4/: .buildinfo  examples.html  index.html  install.html  search.html  searchindex.js
0.7.4/.doctrees/: environment.pickle
0.7.4/dev/: changelog.html  reporters.html
0.7.4/reference/: cli.html  config.html
0.7.4/tutorials/: index.html
0.7.5/: .buildinfo  basic-usage.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.7.5/.doctrees/: basic-usage.doctree  environment.pickle  install.doctree
0.7.5/_modules/: typing.html
0.7.5/_sources/: examples.rst.txt  install.rst.txt
0.7.5/dev/: changelog.html  contributing.html  plugins.html
0.7.5/in-depth/: rationale.html  serialization.html
0.7.5/reference/: config.html
0.7.5/tutorials/: index.html
0.7.6/: .buildinfo  examples.html  index.html  install.html  objects.inv  search.html
0.7.6/.doctrees/: environment.pickle  examples.doctree
0.7.6/_sources/: install.rst.txt
0.7.6/dev/: reporters.html
0.7.6/in-depth/: serialization.html
0.7.6/reference/: cli.html  config.html  plugins.html  styling.html
0.7.6/tutorials/: index.html
0.7.7/: .buildinfo  examples.html  genindex.html  index.html  install.html
0.7.7/_modules/: index.html
0.7.9/: .buildinfo  examples.html  genindex.html  index.html  py-modindex.html  search.html
0.8.0/: .buildinfo  basic-usage.html  examples.html  index.html  install.html  search.html
0.9.0/: .buildinfo  basic-usage.html  search.html  searchindex.js
0.9.1/: .buildinfo  basic-usage.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.9.2/: .buildinfo  basic-usage.html  examples.html  genindex.html  index.html
0.9.6/: .buildinfo  examples.html  py-modindex.html
0.9.8/: .buildinfo  basic-usage.html  index.html  install.html  objects.inv  search.html
docs/: basic-usage.rst  conf.py  examples.rst  index.rst  install.rst
foo/: style.json5
latest/: .buildinfo  basic-usage.html  examples.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
scripts/: build.sh
self-styles/: parent-style-2.json5  parent-style.json5  pyproject-toml-lines.json
tests/: conftest.py  testing_helpers.py
(+1768 files in other folders)
