[tool.poetry]
name = "project-config"
version = "0.1.0"
description = "Reproducible configuration across projects."
authors = ["Álvaro Mondéjar Rubio <mondejar1994@gmail.com>"]
license = "BSD-3-License"
readme = "README.md"
packages = [{ include = "project_config", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
# importlib.metadata.entry_points lacks 'group' argument until 3.10
importlib-metadata = { version = "*", python = "<3.10" }
importlib-metadata-argparse-version = "*"
tomlkit = "^0.11.0"
pyjson5 = "*"
PyYAML = "^6.0"
colored = "*"
tabulate = "^0.8.9"
typing-extensions = "^4.2.0"
jsonschema = "^4.6.0"
jmespath = "^1.0.0"
identify = "^2.5.1"
EditorConfig = "^0.12.3"

[tool.poetry.group.dev.dependencies]
mondeja-bump = "*"
types-PyYAML = "^6.0.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
contextlib-chdir = "^1.0.2"

[tool.poetry.scripts]
project-config = "project_config.__main__:main"

[tool.poetry.plugins."project-config.plugins"]
include = "project_config.plugins.include:IncludePlugin"
jsonschema = "project_config.plugins.jmespath:JMESPathPlugin"

[tool.project-config]
style = ["../project-config-styles/python/base.json5"]
cache = "5 minutes"

[tool.poetry-exec-plugin.commands]
t = "pytest"
test = "pytest"
"test:all" = "pytest"
"test:show" = """pytest &&
python -c 'import webbrowser as w;w.open("http://127.0.0.1:8080")' &&
python -m http.server 8080 -b localhost -d htmlcov
"""
lint = "pre-commit run -a"

[tool.pytest.ini_options]
addopts = "-s --cov=src --cov-report=html"

[tool.mypy]
python_version = "3.7"
strict = true

[tool.isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 79
use_parentheses = true
combine_as_imports = true
include_trailing_comma = true
known_tests = "tests"
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "TESTS", "LOCALFOLDER"]
py_version = 37
extra_standard_library = [
  "contextvars",
  "dataclasses",
  "importlib.resources",
  "importlib.metadata",
  "zoneinfo",
  "graphlib",
]
